fixed footer font being too small and changed color

--- a/lab1/css/styles.css
+++ b/lab1/css/styles.css
@@ -9,7 +9,7 @@ header, main, nav, footer {
 
 footer {
     size: 2em;
-    color:lightgreen;
+    color:seagreen;
 }
 
 table {
@@ -83,7 +83,7 @@ h1 {
 }
 
 footer {
-    font-size: 2px;
+    font-size: 10px;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
